Colaboratory を使用して作成しました

--- a/chartmath101equation.ipynb
+++ b/chartmath101equation.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath101equation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOluwJb+YyoSqpVlYJfITs/",
+      "authorship_tag": "ABX9TyNnOxNRlBLQ0ITI57TwhtTg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1161,11 +1161,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "zwKQsmMEUYY1",
-        "outputId": "cbc03eef-2237-4b59-8f0e-2cdabc390ba3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        }
+        },
+        "outputId": "cbc03eef-2237-4b59-8f0e-2cdabc390ba3"
       },
       "source": [
         "# 練習4 (2) p.15\n",
@@ -1228,12 +1228,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5hf7FMeWsQp9",
-        "outputId": "98869bcb-d898-4faf-d840-074ad2fda11a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        }
+        },
+        "id": "5hf7FMeWsQp9",
+        "outputId": "98869bcb-d898-4faf-d840-074ad2fda11a"
       },
       "source": [
         "# 練習4 (3) p.15\n",
@@ -1296,12 +1296,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zvWKzgpTshbz",
-        "outputId": "124de22a-dbec-41d2-c208-c4d253455429",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        }
+        },
+        "id": "zvWKzgpTshbz",
+        "outputId": "124de22a-dbec-41d2-c208-c4d253455429"
       },
       "source": [
         "# 練習4 (4) p.15\n",
@@ -1364,12 +1364,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "twP128r1st8g",
-        "outputId": "be858302-67f2-42b2-f6c3-3e3d920bf139",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "twP128r1st8g",
+        "outputId": "be858302-67f2-42b2-f6c3-3e3d920bf139"
       },
       "source": [
         "# 基本例題 5 (1) p.16\n",
@@ -1418,12 +1418,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hrP7ZJ4ctC0i",
-        "outputId": "bafe3266-a3ab-47df-df50-082761cb6b8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "hrP7ZJ4ctC0i",
+        "outputId": "bafe3266-a3ab-47df-df50-082761cb6b8c"
       },
       "source": [
         "# 基本例題 5 (2) p.16\n",
@@ -1472,12 +1472,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5AhES1N1tKDs",
-        "outputId": "c242721c-668e-49fa-d66d-951cbf20058e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "5AhES1N1tKDs",
+        "outputId": "c242721c-668e-49fa-d66d-951cbf20058e"
       },
       "source": [
         "# 基本例題 5 (3) p.16\n",
@@ -1526,12 +1526,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JRqYhVfztVsc",
-        "outputId": "6854d12d-0005-4a88-cf37-9a9a85670811",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "JRqYhVfztVsc",
+        "outputId": "6854d12d-0005-4a88-cf37-9a9a85670811"
       },
       "source": [
         "# 基本例題 5 (3) p.16\n",
@@ -1578,23 +1578,14 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uSrj4V0xr2Be"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "2Lu0IRDPthiv",
-        "outputId": "0a9552dd-80c2-440b-8ee6-e2d0e8cc791d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "2Lu0IRDPthiv",
+        "outputId": "0a9552dd-80c2-440b-8ee6-e2d0e8cc791d"
       },
       "source": [
         "# 基本例題 5 (5) p.16\n",
@@ -1643,12 +1634,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "adYV7RLMtqI5",
-        "outputId": "46230bcc-42b0-4a4b-e918-c8a5a06f4c3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "id": "adYV7RLMtqI5",
+        "outputId": "46230bcc-42b0-4a4b-e918-c8a5a06f4c3c"
       },
       "source": [
         "# 基本例題 5 (6) p.16\n",
@@ -1692,6 +1683,393 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cs0AmN4fANeO",
+        "outputId": "a5ec10dd-bc8c-4e9b-cbf1-2d1532618c5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 6 (1) p.17  次の式を展開する\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (x+3)*(x**2-3*x+9)\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x + 3\\right) \\left(x^{2} - 3 x + 9\\right)$",
+            "text/plain": [
+              "(x + 3)*(x**2 - 3*x + 9)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{3} + 27$",
+            "text/plain": [
+              "x**3 + 27"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jto5fdI4Ao7H",
+        "outputId": "15a20273-c1b2-4f54-e543-900f556c84c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 6 (2) p.17  次の式を展開する\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (3*a-2*b)*(9*a**2+6*a*b+4*b**2)\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(3 a - 2 b\\right) \\left(9 a^{2} + 6 a b + 4 b^{2}\\right)$",
+            "text/plain": [
+              "(3*a - 2*b)*(9*a**2 + 6*a*b + 4*b**2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 27 a^{3} - 8 b^{3}$",
+            "text/plain": [
+              "27*a**3 - 8*b**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CVRgBjCvA3E2",
+        "outputId": "7a35de10-5bf6-4a66-cbde-8ad7b7fb65a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        }
+      },
+      "source": [
+        "# 基本例題 6 (3) p.17  次の式を展開する\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (a+3)**3\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a + 3\\right)^{3}$",
+            "text/plain": [
+              "(a + 3)**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{3} + 9 a^{2} + 27 a + 27$",
+            "text/plain": [
+              "a**3 + 9*a**2 + 27*a + 27"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a_E_Td1MBA6n",
+        "outputId": "d06e84d3-af52-44e7-bc99-9cec220a78ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        }
+      },
+      "source": [
+        "# 基本例題 6 (4) p.17  次の式を展開する\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (2*x-y)**3\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(2 x - y\\right)^{3}$",
+            "text/plain": [
+              "(2*x - y)**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 8 x^{3} - 12 x^{2} y + 6 x y^{2} - y^{3}$",
+            "text/plain": [
+              "8*x**3 - 12*x**2*y + 6*x*y**2 - y**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9VGB6X1JBPWT",
+        "outputId": "30820f5d-48ee-4705-ef9a-12e4e6f0c7dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        }
+      },
+      "source": [
+        "# 基本例題 7 p.18 次の式を展開する (1)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (a+b+c)**2\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a + b + c\\right)^{2}$",
+            "text/plain": [
+              "(a + b + c)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{2} + 2 a b + 2 a c + b^{2} + 2 b c + c^{2}$",
+            "text/plain": [
+              "a**2 + 2*a*b + 2*a*c + b**2 + 2*b*c + c**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mIAn4rGZBexU",
+        "outputId": "b5eb6a3a-380c-4abe-87af-d914f790dbb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 7 p.18 次の式を展開する (2)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (x+y+z)*(x-y-z)\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - y - z\\right) \\left(x + y + z\\right)$",
+            "text/plain": [
+              "(x - y - z)*(x + y + z)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{2} - y^{2} - 2 y z - z^{2}$",
+            "text/plain": [
+              "x**2 - y**2 - 2*y*z - z**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "50OPvLdiBqt0",
+        "outputId": "8855a636-8aff-42f2-c29b-f1139696fd42",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "# 基本例題 7 p.18 次の式を展開する (3)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (x**2+3*x-2)*(x**2+3*x+3)\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x^{2} + 3 x - 2\\right) \\left(x^{2} + 3 x + 3\\right)$",
+            "text/plain": [
+              "(x**2 + 3*x - 2)*(x**2 + 3*x + 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{4} + 6 x^{3} + 10 x^{2} + 3 x - 6$",
+            "text/plain": [
+              "x**4 + 6*x**3 + 10*x**2 + 3*x - 6"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KhXXgz3kCBKO"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
