Colaboratory を使用して作成しました

--- a/chartmath101equation.ipynb
+++ b/chartmath101equation.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath101equation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNnOxNRlBLQ0ITI57TwhtTg",
+      "authorship_tag": "ABX9TyPqLyChJrDyp5GyXbmfHBUK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1178,7 +1178,7 @@
         "print()\n",
         "display(expand(expr1*expr2))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1246,7 +1246,7 @@
         "print()\n",
         "display(expand(expr1*expr2))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1314,7 +1314,7 @@
         "print()\n",
         "display(expand(expr1*expr2))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1380,7 +1380,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1434,7 +1434,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1488,7 +1488,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1542,7 +1542,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1596,7 +1596,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1650,7 +1650,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1689,11 +1689,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "cs0AmN4fANeO",
-        "outputId": "a5ec10dd-bc8c-4e9b-cbf1-2d1532618c5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "outputId": "a5ec10dd-bc8c-4e9b-cbf1-2d1532618c5b"
       },
       "source": [
         "# 基本例題 6 (1) p.17  次の式を展開する\n",
@@ -1704,7 +1704,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1743,11 +1743,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "jto5fdI4Ao7H",
-        "outputId": "15a20273-c1b2-4f54-e543-900f556c84c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "outputId": "15a20273-c1b2-4f54-e543-900f556c84c0"
       },
       "source": [
         "# 基本例題 6 (2) p.17  次の式を展開する\n",
@@ -1758,7 +1758,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1797,11 +1797,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "CVRgBjCvA3E2",
-        "outputId": "7a35de10-5bf6-4a66-cbde-8ad7b7fb65a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "outputId": "7a35de10-5bf6-4a66-cbde-8ad7b7fb65a5"
       },
       "source": [
         "# 基本例題 6 (3) p.17  次の式を展開する\n",
@@ -1812,7 +1812,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1851,11 +1851,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "a_E_Td1MBA6n",
-        "outputId": "d06e84d3-af52-44e7-bc99-9cec220a78ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "outputId": "d06e84d3-af52-44e7-bc99-9cec220a78ad"
       },
       "source": [
         "# 基本例題 6 (4) p.17  次の式を展開する\n",
@@ -1866,7 +1866,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1905,11 +1905,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "9VGB6X1JBPWT",
-        "outputId": "30820f5d-48ee-4705-ef9a-12e4e6f0c7dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "outputId": "30820f5d-48ee-4705-ef9a-12e4e6f0c7dd"
       },
       "source": [
         "# 基本例題 7 p.18 次の式を展開する (1)\n",
@@ -1920,7 +1920,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1959,11 +1959,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "mIAn4rGZBexU",
-        "outputId": "b5eb6a3a-380c-4abe-87af-d914f790dbb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "outputId": "b5eb6a3a-380c-4abe-87af-d914f790dbb4"
       },
       "source": [
         "# 基本例題 7 p.18 次の式を展開する (2)\n",
@@ -1974,7 +1974,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2013,11 +2013,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "50OPvLdiBqt0",
-        "outputId": "8855a636-8aff-42f2-c29b-f1139696fd42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 79
-        }
+        },
+        "outputId": "8855a636-8aff-42f2-c29b-f1139696fd42"
       },
       "source": [
         "# 基本例題 7 p.18 次の式を展開する (3)\n",
@@ -2028,7 +2028,7 @@
         "print()\n",
         "display(expand(expr))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2064,6 +2064,198 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zRYSnKnCGJKc",
+        "outputId": "1b71a3f5-8e21-4093-969a-48ae99c4184a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "source": [
+        "# 基本例題 8 p.19 次の式を展開する (1)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (x+y)*(x**2+y**2)*(x-y)\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - y\\right) \\left(x + y\\right) \\left(x^{2} + y^{2}\\right)$",
+            "text/plain": [
+              "(x - y)*(x + y)*(x**2 + y**2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{4} - y^{4}$",
+            "text/plain": [
+              "x**4 - y**4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ugHNkI7hGist",
+        "outputId": "02d241f0-84e8-4f7b-810e-8bfaba09cc6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "source": [
+        "# 基本例題 8 p.19 次の式を展開する (2)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (p+2*q)**2*(p-2*q)**2\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(p - 2 q\\right)^{2} \\left(p + 2 q\\right)^{2}$",
+            "text/plain": [
+              "(p - 2*q)**2*(p + 2*q)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle p^{4} - 8 p^{2} q^{2} + 16 q^{4}$",
+            "text/plain": [
+              "p**4 - 8*p**2*q**2 + 16*q**4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wpn1azxhG6zh",
+        "outputId": "387b09dc-69ed-4233-bc29-b03ecc8e263f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "source": [
+        "# 基本例題 8 p.19 次の式を展開する (3)\n",
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "expr = (x+1)*(x-2)*(x**2-x+1)*(x**2+2*x+4)\n",
+        "display (expr)\n",
+        "print()\n",
+        "display(expand(expr))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x - 2\\right) \\left(x + 1\\right) \\left(x^{2} - x + 1\\right) \\left(x^{2} + 2 x + 4\\right)$",
+            "text/plain": [
+              "(x - 2)*(x + 1)*(x**2 - x + 1)*(x**2 + 2*x + 4)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{6} - 7 x^{3} - 8$",
+            "text/plain": [
+              "x**6 - 7*x**3 - 8"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b7I0hS0Z9Yt4"
+      },
+      "source": [
+        "# 因数分解"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WXTC-V4Q-EMP"
+      },
+      "source": [
+        "1. 2次式の因数分解の公式  \n",
+        "$a^2+2ab+b^2=(a+b)^2$  \n",
+        "$a^2-2ab+b^2=(a-b)^2$  \n",
+        "$a^2-b^2=(a+b)(a-b)$  \n",
+        "$x^2+(a+b)x+ab = (x+a)(x+b)$  \n",
+        "$acx^2+(ad+bc)x+bd=(ax+b)(cx+d)$\n",
+        "\n",
+        "2. 3次式の因数分解の公式  \n",
+        "$a^3+b^3=(a+b)(a^2-ab+b^2)$  \n",
+        "$a^3-b^3=(a+b)(a^2+ab+b^2)$  \n",
+        "$a^3+3a^2b+3ab^2+b^3=(a+b)^3$  \n",
+        "$a^3-3a^2b+3ab^2-b^3=(a-b)^3$  \n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "KhXXgz3kCBKO"
@@ -2071,6 +2263,17 @@
       "source": [
         "# いまここ"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6x3tVZsAB34G"
+      },
+      "source": [
+        "# 基本例題 9 p.22 (1)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
